--- a/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-client/src/app/sidebar/sidebar.component.html
+++ b/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-client/src/app/sidebar/sidebar.component.html
@@ -33,7 +33,7 @@
     </ul>
     <div class="dropdown border-top">
       <a href="#" class="d-flex align-items-center justify-content-center p-3 link-dark text-decoration-none dropdown-toggle" id="dropdownUser3" data-bs-toggle="dropdown" aria-expanded="false">
-        <img src="./assets/{{formattedusername}}-min.jpg" alt="mdo" width="24" height="24" class="rounded-circle">
+        <img src="./assets/{{formattedusername}}-min.png" alt="mdo" width="24" height="24" class="rounded-circle">
       </a>
       <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser3">
         <li><a class="dropdown-item" href="#">New project...</a></li>
