revamped json, popup, dropdown Added 2 images

--- a/Scenario Based Samples/Anonymoususer-UXUI/web-client/src/app/login/login.component.html
+++ b/Scenario Based Samples/Anonymoususer-UXUI/web-client/src/app/login/login.component.html
@@ -1,19 +1,22 @@
 <link href="https://cdn.syncfusion.com/ej2/28.1.33/fluent.css" rel="stylesheet"/>
 
 <div class="login-container container">
-  <div class="title" style="width: 900px;">
-  <h3><b>Multi tenant Row-Level Security in Bold BI® Demo</b></h3>
+  <div class="title" style="width: 900px; display: ruby;">
+  <h3 style="font-size: 30px;"><b>Multi Tenant Row-Level Security in Bold BI® Demo</b></h3>
+  <img src="../../assets/BoldBI-Logo.png" alt="employee" style="height: 40px; margin-left: 42%;">
+
   <p>This sample demonstrates how <b>Row-Level Security (RLS)</b> works in a multi-tenant environment using <b>Bold BI®</b>.</p>
 </div>
   <div class="d-flex justify-content-between align-items-start">
     <!-- Left Side -->
     <div class="info-text" style="width: 63%; font-size:small; border: 1px solid #ccc; border-radius: 8px; height: 500px;">
+      <img src="../../assets/Illustration.jpg" alt="employee" style="margin: 5% 5% 5% 20%;">
     </div>
     
     <!-- Right Side -->
     <div class="login-box" style="width: 34%; height: 500px; margin-left: 40px;">
       <div class="child-div" >
-        <div class="divide2" style="padding: 20px; border-radius: 8px 8px 0px 0px; background-color: white; height: 89%;">
+        <div class="divide2" style="padding: 20px; border-radius: 8px 8px 0px 0px; background-color: white; height: 88.6%;">
         <h2 class="login-header">Login</h2>
         <p class="login-subtext">Please select a user to log in</p>
         <form (ngSubmit)="onSubmit()">
@@ -22,25 +25,24 @@
             <ejs-combobox id='games' #sample [dataSource]='filteredData' name="useremail" [fields]='fields' [(value)]="selectedUser" [popupHeight]='height' [placeholder]="'Select the User'" [(ngModel)]="selectedUser" 
             (change)="onUserChange($event)" [itemTemplate]='itemTemplate' [groupTemplate]="groupTemplate" [valueTemplate]='valueTemplate' allowFiltering="true" (filtering)="onFiltering($event)"></ejs-combobox>
             <ng-template #itemTemplate let-data>
-              <div class="item-container">
+              <div class="item-container" style="height: 30px;">
                 <div class="empImage-frame">
                   <img src="../../assets/{{data.username}}.jpg" alt="employee" class="empImage">
-              </div>
-                <div class="username">{{ data.username }} - {{ data.groupName }}</div>
+                </div>
+                <div class="username">{{ data.username }} <span style="font-size: 16px; color: #475467; font-weight: 300;"> {{ data.role }} </span></div>
               </div>
             </ng-template>
             <ng-template #groupTemplate let-data>
               <div class="group-header">
-                <!-- <strong class="tenant-name">{{ formatTenantName(data.usertenant) }}</strong> -->
-                <strong class="tenant-name">tenant test</strong>
+                <strong class="tenant-name"> {{ data.tenant }}</strong>
               </div>
             </ng-template>
             <ng-template #valueTemplate let-data>
-              <div class="value-container">
+              <div class="value-container" style="height: 30px; padding: 5% 0% 5% 2%;">
                 <div class="empImage-frame">
                   <img [src]="'./assets/' + data.username + '.jpg'" alt="employee" class="empImage">
               </div>
-                <div class="username">{{ data.username }}</div>
+                <div class="username" style="padding-left: 1%;"> {{ data.username }}</div>
               </div>
             </ng-template>
           </div>
@@ -55,19 +57,22 @@
             />
           </div>
           <button type="submit" class="login-button">Login</button><br>
-          <button type="submit" class="access-button" (click)="openPopup()">Access Approaches</button>
         </form>
+        <button type="submit" class="access-button" (click)="openPopup()">Access Approaches</button>
 
       <div class="error-message" *ngIf="loginError">{{ loginError }}</div>
     </div>
       <div *ngIf="showPopup" class="popup-overlay">
         <div class="popup-content">
           
-          <button type="button" class="close-btn" (click)="closePopup()">✖</button>
+          <button type="button" class="close-btn" (click)="closePopup()"> <!--✖ -->
+            <span class="icon">&times;</span>
+
+          </button>
 
           <div class="control-section button-group-container">
             <div class="button-group-section">
-                <div id="button-group-control">
+                <div id="button-group-control" style="width: 69%;">
                     <div class="row">
                        <div class="popup-text">
                       <h3><b>Embedding Sample</b></h3>
@@ -79,31 +84,30 @@
                           <input type="radio" id="center" name="align" value="workflowdiagram" [(ngModel)]="popupselectedOption" />
                           <label class="e-btn" for="center">Workflow Diagram</label>
                           <input type="radio" id="right" name="align" value="userdetails" [(ngModel)]="popupselectedOption" />
-                          <label class="e-btn" for="right">User's Details</label>                                    
+                          <label class="e-btn" style="margin-right: 2%;" for="right">User's Details</label>                                    
                       </div>
                     </div>
                 </div>
             </div>
           </div>
-        <div *ngIf="popupselectedOption === 'structure'" class="popup-image">
-          <ol>
-            <li>Authenticated Users (Bold BI Users):</li>
+        <div *ngIf="popupselectedOption === 'structure'" class="popup-image" style="padding: 20px;">
+          
+         <li class="structure-heading">Step 1: Authenticated Users (Bold BI Users):</li>
             <ul>
               <li>Users must be present in Bold BI, and their username must be passed via the authorization server.</li>
               <li>The system applies built-in <b>row-level security (RLS)</b> based on user filters defined in Bold BI.</li>
               <li>Alternatively, external filter parameters can be used to refine user-specific data access.</li>
             </ul>
           
-            <li>Anonymous Users (Guest Access with Group-Based Permissions):</li>
+            <li class="structure-heading">Step 2: Anonymous Users (Guest Access with Group-Based Permissions):</li>
             <ul>
               <li>Users do not need to be present in Bold BI when the <b>anonymous feature</b> is enabled. However a <b>group present in Bold BI</b> must be passed as parameter.</li>
               <li>Row-level security is applied based on externally passed filter parameters.</li>
               <li>Alternatively, RLS can be configured in <b>Bold BI's user filter feature for groups</b>.</li>
               <ul><li>Example: A <b>Sales</b> group may see only sales-related data, while a Finance group may have access to financial reports only.</li></ul>
             </ul>
-          </ol>
-          
-          <p>How this works:<p>
+    
+            <li class="structure-heading">How this works:</li>
             <ul>
               <li>When a user logs in, the system applies the appropriate row-level security settings.</li>
               <li>If a user accesses the dashboard anonymously, the embedding layer ensures data visibility based on <b>group-level filters</b>.</li>
@@ -115,9 +119,11 @@
           <img src="assets/anonymousFlowchart.jpg" alt="Workflow Diagram" style="width: 100%;" />
         </div>
         <div *ngIf="popupselectedOption === 'userdetails'" class="popup-image">
-          <div class="table-container mt-4" style="overflow-y: auto; font-size:small; margin-top: 0px !important">
-            <table class="table table-bordered">
+          <div class="table-container mt-4" style=" border-radius: 8px; font-size:small; margin-top: 0px !important">
+            <!-- <div class="table-container mt-4"> -->
+            <table class="table table-bordered" style="margin-bottom: 0px">
                 <thead style="position: sticky; top: 0; background: #007bff; z-index: 10;">
+                  <!-- <thead> -->
                   <tr>
                     <th>Tenant</th>
                     <th>Username</th>
@@ -146,17 +152,42 @@
                   </tr>
                 </tbody>
             </table>
+
+            <!-- <div class="table-body">
+              <table class="table table-bordered">
+                <tbody>
+                  <tr *ngFor="let user of userData; let i = index">
+                    <td *ngIf="shouldShowRowspan(userData, i)" [attr.rowspan]="4">
+                      {{ user.tenant }}
+                    </td>
+                    <td>{{ user.username }}</td>
+                    <td>{{ user.email }}</td>
+                    <td *ngIf="shouldShowRowspan(userData, i)" [attr.rowspan]="4">
+                      {{ user.customattribute }}
+                    </td>
+                    <td>{{ user.filterparameter }}</td>
+                    <td>
+                      {{ user.groupName }}
+                    </td>
+                    <td>{{ user.access }}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div> -->
+
           </div>
         </div>
         </div>
       </div>
       
-      <div class="button-container" style="background-color: #e1e1e1; border-radius: 0px 0px 8px 8px; padding-left: 3%;">
+      <div class="button-container" style="background-color: #f9f9f9; border-radius: 0px 0px 8px 8px; padding-left: 3%;">
         <button type="button" class="btn btn-primary show-popup-btn advanced-btn" style="margin: 0px;
-    padding: 0px;">
+    padding: 0px;" (click)="openPopup1()">
       Enter BoldBI Server
     </button>
-    <button type="button" class="btn btn-primary show-popup-btn advanced-btn" style="padding-left: 41%;">
+    
+    <button type="button" class="btn btn-primary show-popup-btn advanced-btn" style="padding-left: 41%;"
+     (click)="userdetailpopup()">
       User's Details
     </button>
     </div>
@@ -167,7 +198,9 @@
 
   <div *ngIf="showPopup1" class="popup-overlay">
     <div class="popup-content1">
-      <button type="button" class="close-btn" (click)="closePopup1()">✖</button>
+      <button type="button" class="close-btn" (click)="closePopup1()">
+        <span class="icon">&times;</span>
+      </button>
       <h3 class="popup-header">Bold BI Server</h3>
        <p>The Bold BI Server below is being used for this Multi tenant Row-Level Security sample. You can log in to the server using the credentials provided below to verify the user and group details in the Bold BI® Server.</p>
       <div>
