--- a/Scenario Based Samples/Anonymoususer-UXUI/web-client/src/app/login/login.component.scss
+++ b/Scenario Based Samples/Anonymoususer-UXUI/web-client/src/app/login/login.component.scss
@@ -63,6 +63,13 @@
   color: #ff0000;
   margin-top: 10px;
   text-align: center;
+  position: absolute;
+
+  //top: -25px; /* Adjust as needed */
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 14px;
+  white-space: nowrap; /* Prevents wrapping */
 }
 
 /* Optional: Center the form vertically and horizontally on the page */
@@ -120,6 +127,7 @@ body {
 /* Specific styles for the child divs */
 .child-div {
   width: 200px;
+  position: relative;
   /* Set width */
 }
 
@@ -353,7 +361,6 @@ ejs-radiobutton:hover {
 
 .popup-image {
   width: 100%;
-  height: 510px;
   display: block;
   margin: 0 auto;
   position: sticky;
@@ -366,10 +373,11 @@ ejs-radiobutton:hover {
   margin: 10px;
 }
 
-// .button-container {
-//   display: flex;
-//   justify-content: center;
-// }
+.button-container {
+  background-color: #f9f9f9;
+  border-radius: 0px 0px 8px 8px;
+  padding-left: 3%;
+}
 
 input[type="password"]:focus {
   outline: none;
@@ -420,15 +428,86 @@ input[type="password"]:focus {
   border: 1px solid black;
 }
 
+th {
+  background-color: #f9f9f9;
+}
+
 @media (max-width: 1950px) {
   .server-table {
     margin-left: 17%;
   }
 
   .table-container {
-    max-height: 440px;
+    max-height: 650px;
     overflow-y: auto;
     border: 1px solid #ddd; /* Ensure border visibility */
+  }
+
+  .heading {
+    font-size: 35px;
+  }
+  .paragraph, .error-message {
+    font-size: 20px;
+  }
+
+  .error-message {
+    margin-top: 7%;
+  }
+
+  .bolbilogo {
+    height: 50px; 
+    margin-left: 46%;
+  }
+
+  .login-box {
+    height: 700px;
+  }
+
+  .info-text, .child-div {
+    border-radius: 16px;
+    height: 700px;
+  }
+
+  .illustration-img {
+    margin: 3% 5% 2% 15%;
+    height: 650px;
+  }
+
+  .divide2 {
+    height: 91%;
+  }
+
+  .login-bottombuttons, .login-subtext, .login-button, .access-button, .popup-paragraph {
+    font-size: 20px;
+  }
+
+  .login-button {
+    margin-top: 10%;
+  }
+
+  .login-header {
+    font-size: 28px;
+  }
+
+  .user-label {
+    font-size: 18px;
+  }
+
+  .email-div {
+    margin-bottom: 18px;
+  }
+
+  .popup-image {
+    height: 650px;
+    font-size: 20px;
+  }
+
+  .popup-heading {
+    font-size: 32px !important;
+  }
+
+  .table {
+    font-size: 16px;
   }
 }
 
@@ -439,6 +518,79 @@ input[type="password"]:focus {
 
   .table-container {
     max-height: 508px;
+  }
+
+  .heading {
+    font-size: 30px;
+  }
+
+  .paragraph {
+    font-size: 16px;
+  }
+
+  .bolbilogo {
+    height: 40px;
+    margin-left: 42%;
+  }
+
+  .login-box {
+    height: 500px;
+  }
+
+  .info-text, .child-div {
+    border-radius: 8px;
+    height: 500px;
+  }
+
+  .illustration-img {
+    margin: 5% 5% 5% 20%;
+    height: 450px;
+  }
+
+  .divide2 {
+    height: 88.6%;
+  }
+
+  .login-bottombuttons, .login-subtext, .login-button, .access-button {
+    font-size: 16px;
+  }
+
+  .login-button {
+    margin-top: 0%;
+  }
+
+  .login-header {
+    font-size: 24px;
+  }
+
+  .user-label {
+    font-size: 14px;
+  }
+
+  .error-message{
+    font-size: 16px;
+    margin-top: 1%;
+  }
+
+  .email-div {
+    margin-bottom: 8px;
+  }
+
+  .popup-image {
+    height: 510px;
+    font-size: 16px;
+  }
+
+  .popup-heading {
+    font-size: 28px;
+  }
+
+  .popup-paragraph {
+    font-size: 16px;
+  }
+
+  .table {
+    font-size: 13px;
   }
 }
 
@@ -453,7 +605,6 @@ child-div, .scrollable-table {
   padding: 0px;
   background-color: #e1e1e1;
   width: 100%;
-  height: 500px;
 }
 
 .child-div::before {
@@ -472,11 +623,9 @@ child-div, .scrollable-table {
 
 .login-header {
   text-align: left;
-  font-size: 24px;
 }
 
 .login-subtext {
-  font-size: 16px;
   color: #555; /* Slightly muted text color */
   text-align: left;
 }
@@ -484,24 +633,24 @@ child-div, .scrollable-table {
 .user-label {
   font-family: Inter, sans-serif;
   font-weight: 600;
-  font-size: 14px;
   line-height: 20px;
   letter-spacing: 0%;
   display: block;
+  margin-bottom: 4px;
 }
 
 .item-container {
+  height: 30px;
   display: flex;
   align-items: center;
-  padding: 10px 16px;
+  padding: 18px 10px 16px 24px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
-.item-container:hover {
-  background-color: burlywood;
+.e-list-item.e-active {
+background-color: none;
 }
-
 .group-header {
   height: 30px;
   font-weight: bold;
@@ -509,7 +658,7 @@ child-div, .scrollable-table {
   padding: 8px 12px;
   //border-bottom: 1px solid #e0e0e0;
   color: #333;
-  text-transform: uppercase;
+ // text-transform: uppercase;
   letter-spacing: 0.5px; /* Slightly reduced letter-spacing */
 }
 
@@ -547,6 +696,7 @@ child-div, .scrollable-table {
 
 .structure-heading {
   list-style-type: none;
+  font-weight: 500;
 }
 
 .row {
@@ -604,4 +754,8 @@ child-div, .scrollable-table {
 .value-container{
   display: flex;
   align-items: center;
+}
+
+#games_popup {
+  margin-top: 0.6%;
 }
