preload the images

--- a/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-client/src/app/login/login.component.scss
+++ b/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-client/src/app/login/login.component.scss
@@ -387,7 +387,7 @@ ejs-radiobutton:hover {
 .button-container {
   display: flex;
   justify-content: center;
-
+}
 input[type="password"]:focus {
   outline: none;
 }
@@ -524,4 +524,3 @@ input[type="password"]:focus {
   color: #333;
   text-transform: uppercase;
 }
-
