--- a/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-client/src/app/login/login.component.html
+++ b/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-client/src/app/login/login.component.html
@@ -138,7 +138,7 @@
             <ng-template #itemTemplate let-data>
               <div class="item-container">
                 <div class="empImage-frame">
-                  <img src="./assets/{{data.username}}-min.png" alt="employee" class="empImage">
+                  <img src="./assets/{{data.username}}-min.png" alt="employee" class="empImage" loading="lazy">
               </div>
                 <div class="username">{{ data.username }}</div>
               </div>
