updated images handled sidebar icons redirection updated sidebar profile photo dynamically Tried auto login details to empty

--- a/Scenario Based Samples/Anonymoususer-UXUI/web-client/src/app/header/header.component.html
+++ b/Scenario Based Samples/Anonymoususer-UXUI/web-client/src/app/header/header.component.html
@@ -4,14 +4,14 @@
         <!-- Left Part -->
         <ul class="navbar-nav left-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#" style="font-weight: 600;">Sales Analysis Dashboard</a>
+            <a class="nav-link" style="font-weight: 600;">Sales Analysis Dashboard</a>
           </li>
         </ul>
   
         <!-- Right Part -->
         <ul class="navbar-nav right-nav">
           <li class="nav-item" >
-            <a class="nav-link" href="#" style="font-weight: 600; display: inline-block;">Welcome {{ displayUser }}</a>
+            <a class="nav-link" style="font-weight: 600; display: inline-block;">Welcome {{ displayUser }}</a>
             <span class="info-icon ion-information-circled"></span>
             <div class="description-content">
               <li><b>Custom Attribute &rarr;</b> {{getCustomAttribute}}</li>
